WINDUP-2171 Added JDK 11 profile for testing